--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ uvicorn = "^0.34.3"
 influxdb-client = "^1.49.0"
 flask = "^3.1.1"
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.4.0"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
